# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

* rc-scripts 1.4.2.4 (26 Nov 2002)

  26 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:

    Initial merge of bits for Adelie Linux for SSI clusters.  More
    info at:

      http://www.cerca.umontreal.ca/hpc/en/projects/adelie/index.html

  25 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:

    One liner fix to src/awk/cachedepends.awk to once again fix
    bug #7803.

  18 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add 'alias char-major-89    i2c-dev' to /etc/modules.d/aliases.
    This should close bug #10891.

* rc-scripts 1.4.2.3 (18 Nov 2002)

  18 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add some more checks to src/awk/*.  Fix error printing for
    /sbin/depscan.sh.

    Link awk module with gcc and not with ld.  This should fix
    problems on sparc and alpha.  Many thanks for this fix to
    Stephan Jones <cretin@gentoo.org>.

    Remove the copyright info from config files, thanks to
    Matthew Kennedy <mkennedy@gentoo.org>.

* rc-scripts 1.4.2.2 (18 Nov 2002)

  18 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add src/awk/genenviron.awk which is rc-envupdate.sh ported
    to awk.  This is also much faster than its bash version.

    Remove the 'Spider cat fix' from depscan.sh.bash, as it makes
    things even slower on older boxes.  Bug #10548.

    After a bored Vapier decided that he needed to update the
    licenses of things in /etc :P, I did the rest.  Hopefully
    not too many people will nuke thier fstab :/

* rc-scripts 1.4.2.1 (18 Nov 2002)

  18 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:

    Update src/awk/cachedepends.awk to find its own rc-scripts,
    fixing the need for find which broke systems with /usr on
    a different partition.

  17 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:
